--- a/Runtime/YanickSenn.Utils.asmdef
+++ b/Runtime/YanickSenn.Utils.asmdef
@@ -1,8 +1,9 @@
-
 {
     "name": "YanickSenn.Utils",
     "rootNamespace": "YanickSenn.Utils",
-    "references": [],
+    "references": [
+        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
